fix width on event/books on mobile

--- a/style.css
+++ b/style.css
@@ -394,7 +394,7 @@ header {
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
     gap: 4em;
-    padding: 0 1.5em 1.5em 1.5em;
+
     margin-top: 1em;
   }
 
@@ -426,7 +426,7 @@ header {
 
   /* ----------- Event kort ----------- */
   .event-title {
-    max-width: 90%;
+    max-width: 100%;
     margin: 0 auto;
   }
 
@@ -438,7 +438,7 @@ header {
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
     gap: 4em;
-    padding: 0 1.5em 1.5em 1.5em;
+
     margin-top: 1em;
   }
 
